# fftrie-rs

./: .gitignore  Cargo.toml
crates/ethdb/: Cargo.toml
crates/ethdb/src/: lib.rs  rawdb.rs
crates/fftrie/: Cargo.toml  Makefile
crates/fftrie/src/: lib.rs  node.rs  store.rs
src/: lib.rs  nibbles.rs  node.rs  store.rs
