[package]
name = "fftrie-rs"
version = "0.1.0"
edition = "2021"

[features]
bench = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
hmac-sha256 = "1.1.7"
memmap2 = "0.9.0"
rlp = "0.5.2"
serde = { version = "1.0.190", features = ["derive", "std"] }
serde_cbor = "0.11.2"
serde_json = "1.0.107"
tiny-keccak = { version = "2.0.0", features = ["keccak"] }
